# libhanjp

./: CMakeLists.txt  CODE_CONVENTION.md  COPYING  LICENSE  README.md  automata.cpp  automata.h  combination.xml  hangulunicode.h  hanjp.cpp  hanjp.h  hanjpautomata.c  hanjpautomata.h  hanjpbuffer.c  hanjpbuffer.h  hanjpinputcontext.c  hanjpinputcontext.h  hanjpkeyboard.c  hanjpkeyboard.h  hanjpunicode.h  inputcontext.cpp  keyboard.cpp  keyboard.h  keyboard.xml  testing.cpp
.github/workflows/: cmake.yml
package/arch/: PKGBUILD
test/: CMakeLists.txt  test_am.cpp  test_gobj_construct_dispose.cpp  test_ic.cpp  test_input_context_convert.cpp  testing.cpp
