set(CMAKE_CXX_STANDARD 11)

include(FetchContent)
FetchContent_Declare(
    googletest
    URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

add_executable(testing testing.cpp)

target_include_directories(testing PRIVATE ${PROJECT_SOURCE_DIR})
target_link_libraries(testing PUBLIC hanjp gtest_main)

include(GoogleTest)
gtest_discover_tests(testing)